# holdings-simile

./: .gitignore  CMakeLists.txt  README.md  article.cpp  article.h  board.cpp  board.h  definition.cpp  definition.h  dictionary.cpp  dictionary.h  holdingsSimile.cpp  holdingsSimile.h  html.cpp  html.h  kshetra_simile.h  main.cpp  modifier.cpp  modifier.h  one_clearable.cpp  one_clearable.h  point_simile.cpp  point_simile.h  super.cpp  super.h  theory.cpp  theory.h  theorySimile.cpp  theorySimile.h  triangle_simile.cpp  triangle_simile.h
article/: article.cpp  article.h  board.cpp  board.h  body.cpp  body.h  footer.cpp  footer.h  head.cpp  head.h  html.cpp  html.h  sentence.cpp  sentence.h
process/intrinsic/: cleanliness.h
process/intrinsic/axiology/instructions/: instruction.h
